pp3/y.output
Gram'atica

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: ClassDecl
    5     | FnDecl
    6     | VarDecl
    7     | IntfDecl

    8 VarDecl: Variable ';'

    9 Variable: Type T_Identifier

   10 Type: T_Int
   11     | T_Bool
   12     | T_String
   13     | T_Double
   14     | T_Identifier
   15     | Type T_Dims

   16 IntfDecl: T_Interface T_Identifier '{' IntfList '}'

   17 IntfList: IntfList FnHeader ';'
   18         | /* vac'io */

   19 ClassDecl: T_Class T_Identifier OptExt OptImpl '{' FieldList '}'

   20 OptExt: T_Extends T_Identifier
   21       | /* vac'io */

   22 OptImpl: T_Implements ImpList
   23        | /* vac'io */

   24 ImpList: ImpList ',' T_Identifier
   25        | T_Identifier

   26 FieldList: FieldList Field
   27          | /* vac'io */

   28 Field: VarDecl
   29      | FnDecl

   30 FnHeader: Type T_Identifier '(' Formals ')'
   31         | T_Void T_Identifier '(' Formals ')'

   32 Formals: FormalList
   33        | /* vac'io */

   34 FormalList: FormalList ',' Variable
   35           | Variable

   36 FnDecl: FnHeader StmtBlock

   37 StmtBlock: '{' VarDecls StmtList '}'

   38 VarDecls: VarDecls VarDecl
   39         | /* vac'io */

   40 StmtList: Stmt StmtList
   41         | /* vac'io */

   42 Stmt: OptExpr ';'
   43     | StmtBlock
   44     | T_If '(' Expr ')' Stmt OptElse
   45     | T_While '(' Expr ')' Stmt
   46     | T_For '(' OptExpr ';' Expr ';' OptExpr ')' Stmt
   47     | T_Return Expr ';'
   48     | T_Return ';'
   49     | T_Print '(' ExprList ')' ';'
   50     | T_Break ';'

   51 LValue: T_Identifier
   52       | Expr '.' T_Identifier
   53       | Expr '[' Expr ']'

   54 Call: T_Identifier '(' Actuals ')'
   55     | Expr '.' T_Identifier '(' Actuals ')'

   56 OptExpr: Expr
   57        | /* vac'io */

   58 Expr: LValue
   59     | Call
   60     | Constant
   61     | LValue '=' Expr
   62     | Expr '+' Expr
   63     | Expr '-' Expr
   64     | Expr '/' Expr
   65     | Expr '*' Expr
   66     | Expr '%' Expr
   67     | Expr T_Equal Expr
   68     | Expr T_NotEqual Expr
   69     | Expr '<' Expr
   70     | Expr '>' Expr
   71     | Expr T_LessEqual Expr
   72     | Expr T_GreaterEqual Expr
   73     | Expr T_And Expr
   74     | Expr T_Or Expr
   75     | '(' Expr ')'
   76     | '-' Expr
   77     | '!' Expr
   78     | T_ReadInteger '(' ')'
   79     | T_ReadLine '(' ')'
   80     | T_New '(' T_Identifier ')'
   81     | T_NewArray '(' Expr ',' Type ')'
   82     | T_This

   83 Constant: T_IntConstant
   84         | T_BoolConstant
   85         | T_DoubleConstant
   86         | T_StringConstant
   87         | T_Null

   88 Actuals: ExprList
   89        | /* vac'io */

   90 ExprList: ExprList ',' Expr
   91         | Expr

   92 OptElse: T_Else Stmt
   93        | /* vac'io */


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 77
'%' (37) 66
'(' (40) 30 31 44 45 46 49 54 55 75 78 79 80 81
')' (41) 30 31 44 45 46 49 54 55 75 78 79 80 81
'*' (42) 65
'+' (43) 62
',' (44) 24 34 81 90
'-' (45) 63 76
'.' (46) 52 55
'/' (47) 64
';' (59) 8 17 42 46 47 48 49 50
'<' (60) 69
'=' (61) 61
'>' (62) 70
'[' (91) 53
']' (93) 53
'{' (123) 16 19 37
'}' (125) 16 19 37
error (256)
T_Void (258) 31
T_Bool (259) 11
T_Int (260) 10
T_Double (261) 13
T_String (262) 12
T_Class (263) 19
T_LessEqual (264) 71
T_GreaterEqual (265) 72
T_Equal (266) 67
T_NotEqual (267) 68
T_Dims (268) 15
T_And (269) 73
T_Or (270) 74
T_Null (271) 87
T_Extends (272) 20
T_This (273) 82
T_Interface (274) 16
T_Implements (275) 22
T_While (276) 45
T_For (277) 46
T_If (278) 44
T_Else (279) 92
T_Return (280) 47 48
T_Break (281) 50
T_New (282) 80
T_NewArray (283) 81
T_Print (284) 49
T_ReadInteger (285) 78
T_ReadLine (286) 79
T_Identifier (287) 9 14 16 19 20 24 25 30 31 51 52 54 55 80
T_StringConstant (288) 86
T_IntConstant (289) 83
T_DoubleConstant (290) 85
T_BoolConstant (291) 84
T_UnaryMinus (292)
T_Lower_Than_Else (293)


No terminales con las reglas donde aparecen

$accept (57)
    en la izquierda: 0
Program (58)
    en la izquierda: 1, en la derecha: 0
DeclList (59)
    en la izquierda: 2 3, en la derecha: 1 2
Decl (60)
    en la izquierda: 4 5 6 7, en la derecha: 2 3
VarDecl (61)
    en la izquierda: 8, en la derecha: 6 28 38
Variable (62)
    en la izquierda: 9, en la derecha: 8 34 35
Type (63)
    en la izquierda: 10 11 12 13 14 15, en la derecha: 9 15 30 81
IntfDecl (64)
    en la izquierda: 16, en la derecha: 7
IntfList (65)
    en la izquierda: 17 18, en la derecha: 16 17
ClassDecl (66)
    en la izquierda: 19, en la derecha: 4
OptExt (67)
    en la izquierda: 20 21, en la derecha: 19
OptImpl (68)
    en la izquierda: 22 23, en la derecha: 19
ImpList (69)
    en la izquierda: 24 25, en la derecha: 22 24
FieldList (70)
    en la izquierda: 26 27, en la derecha: 19 26
Field (71)
    en la izquierda: 28 29, en la derecha: 26
FnHeader (72)
    en la izquierda: 30 31, en la derecha: 17 36
Formals (73)
    en la izquierda: 32 33, en la derecha: 30 31
FormalList (74)
    en la izquierda: 34 35, en la derecha: 32 34
FnDecl (75)
    en la izquierda: 36, en la derecha: 5 29
StmtBlock (76)
    en la izquierda: 37, en la derecha: 36 43
VarDecls (77)
    en la izquierda: 38 39, en la derecha: 37 38
StmtList (78)
    en la izquierda: 40 41, en la derecha: 37 40
Stmt (79)
    en la izquierda: 42 43 44 45 46 47 48 49 50, en la derecha: 40
    44 45 46 92
LValue (80)
    en la izquierda: 51 52 53, en la derecha: 58 61
Call (81)
    en la izquierda: 54 55, en la derecha: 59
OptExpr (82)
    en la izquierda: 56 57, en la derecha: 42 46
Expr (83)
    en la izquierda: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 80 81 82, en la derecha: 44 45 46 47 52 53 55
    56 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 81 90 91
Constant (84)
    en la izquierda: 83 84 85 86 87, en la derecha: 60
Actuals (85)
    en la izquierda: 88 89, en la derecha: 54 55
ExprList (86)
    en la izquierda: 90 91, en la derecha: 49 88 90
OptElse (87)
    en la izquierda: 92 93, en la derecha: 44


State 0

    0 $accept: . Program $end

    T_Void        desplazar e ir al estado 1
    T_Bool        desplazar e ir al estado 2
    T_Int         desplazar e ir al estado 3
    T_Double      desplazar e ir al estado 4
    T_String      desplazar e ir al estado 5
    T_Class       desplazar e ir al estado 6
    T_Interface   desplazar e ir al estado 7
    T_Identifier  desplazar e ir al estado 8

    Program    ir al estado 9
    DeclList   ir al estado 10
    Decl       ir al estado 11
    VarDecl    ir al estado 12
    Variable   ir al estado 13
    Type       ir al estado 14
    IntfDecl   ir al estado 15
    ClassDecl  ir al estado 16
    FnHeader   ir al estado 17
    FnDecl     ir al estado 18


State 1

   31 FnHeader: T_Void . T_Identifier '(' Formals ')'

    T_Identifier  desplazar e ir al estado 19


State 2

   11 Type: T_Bool .

    $default  reduce usando la regla 11 (Type)


State 3

   10 Type: T_Int .

    $default  reduce usando la regla 10 (Type)


State 4

   13 Type: T_Double .

    $default  reduce usando la regla 13 (Type)


State 5

   12 Type: T_String .

    $default  reduce usando la regla 12 (Type)


State 6

   19 ClassDecl: T_Class . T_Identifier OptExt OptImpl '{' FieldList '}'

    T_Identifier  desplazar e ir al estado 20


State 7

   16 IntfDecl: T_Interface . T_Identifier '{' IntfList '}'

    T_Identifier  desplazar e ir al estado 21


State 8

   14 Type: T_Identifier .

    $default  reduce usando la regla 14 (Type)


State 9

    0 $accept: Program . $end

    $end  desplazar e ir al estado 22


State 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        desplazar e ir al estado 1
    T_Bool        desplazar e ir al estado 2
    T_Int         desplazar e ir al estado 3
    T_Double      desplazar e ir al estado 4
    T_String      desplazar e ir al estado 5
    T_Class       desplazar e ir al estado 6
    T_Interface   desplazar e ir al estado 7
    T_Identifier  desplazar e ir al estado 8

    $default  reduce usando la regla 1 (Program)

    Decl       ir al estado 23
    VarDecl    ir al estado 12
    Variable   ir al estado 13
    Type       ir al estado 14
    IntfDecl   ir al estado 15
    ClassDecl  ir al estado 16
    FnHeader   ir al estado 17
    FnDecl     ir al estado 18


State 11

    3 DeclList: Decl .

    $default  reduce usando la regla 3 (DeclList)


State 12

    6 Decl: VarDecl .

    $default  reduce usando la regla 6 (Decl)


State 13

    8 VarDecl: Variable . ';'

    ';'  desplazar e ir al estado 24


State 14

    9 Variable: Type . T_Identifier
   15 Type: Type . T_Dims
   30 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Dims        desplazar e ir al estado 25
    T_Identifier  desplazar e ir al estado 26


State 15

    7 Decl: IntfDecl .

    $default  reduce usando la regla 7 (Decl)


State 16

    4 Decl: ClassDecl .

    $default  reduce usando la regla 4 (Decl)


State 17

   36 FnDecl: FnHeader . StmtBlock

    '{'  desplazar e ir al estado 27

    StmtBlock  ir al estado 28


State 18

    5 Decl: FnDecl .

    $default  reduce usando la regla 5 (Decl)


State 19

   31 FnHeader: T_Void T_Identifier . '(' Formals ')'

    '('  desplazar e ir al estado 29


State 20

   19 ClassDecl: T_Class T_Identifier . OptExt OptImpl '{' FieldList '}'

    T_Extends  desplazar e ir al estado 30

    $default  reduce usando la regla 21 (OptExt)

    OptExt  ir al estado 31


State 21

   16 IntfDecl: T_Interface T_Identifier . '{' IntfList '}'

    '{'  desplazar e ir al estado 32


State 22

    0 $accept: Program $end .

    $default  aceptar


State 23

    2 DeclList: DeclList Decl .

    $default  reduce usando la regla 2 (DeclList)


State 24

    8 VarDecl: Variable ';' .

    $default  reduce usando la regla 8 (VarDecl)


State 25

   15 Type: Type T_Dims .

    $default  reduce usando la regla 15 (Type)


State 26

    9 Variable: Type T_Identifier .
   30 FnHeader: Type T_Identifier . '(' Formals ')'

    '('  desplazar e ir al estado 33

    $default  reduce usando la regla 9 (Variable)


State 27

   37 StmtBlock: '{' . VarDecls StmtList '}'

    $default  reduce usando la regla 39 (VarDecls)

    VarDecls  ir al estado 34


State 28

   36 FnDecl: FnHeader StmtBlock .

    $default  reduce usando la regla 36 (FnDecl)


State 29

   31 FnHeader: T_Void T_Identifier '(' . Formals ')'

    T_Bool        desplazar e ir al estado 2
    T_Int         desplazar e ir al estado 3
    T_Double      desplazar e ir al estado 4
    T_String      desplazar e ir al estado 5
    T_Identifier  desplazar e ir al estado 8

    $default  reduce usando la regla 33 (Formals)

    Variable    ir al estado 35
    Type        ir al estado 36
    Formals     ir al estado 37
    FormalList  ir al estado 38


State 30

   20 OptExt: T_Extends . T_Identifier

    T_Identifier  desplazar e ir al estado 39


State 31

   19 ClassDecl: T_Class T_Identifier OptExt . OptImpl '{' FieldList '}'

    T_Implements  desplazar e ir al estado 40

    $default  reduce usando la regla 23 (OptImpl)

    OptImpl  ir al estado 41


State 32

   16 IntfDecl: T_Interface T_Identifier '{' . IntfList '}'

    $default  reduce usando la regla 18 (IntfList)

    IntfList  ir al estado 42


State 33

   30 FnHeader: Type T_Identifier '(' . Formals ')'

    T_Bool        desplazar e ir al estado 2
    T_Int         desplazar e ir al estado 3
    T_Double      desplazar e ir al estado 4
    T_String      desplazar e ir al estado 5
    T_Identifier  desplazar e ir al estado 8

    $default  reduce usando la regla 33 (Formals)

    Variable    ir al estado 35
    Type        ir al estado 36
    Formals     ir al estado 43
    FormalList  ir al estado 38


State 34

   37 StmtBlock: '{' VarDecls . StmtList '}'
   38 VarDecls: VarDecls . VarDecl

    T_Bool            desplazar e ir al estado 2
    T_Int             desplazar e ir al estado 3
    T_Double          desplazar e ir al estado 4
    T_String          desplazar e ir al estado 5
    T_Null            desplazar e ir al estado 44
    T_This            desplazar e ir al estado 45
    T_While           desplazar e ir al estado 46
    T_For             desplazar e ir al estado 47
    T_If              desplazar e ir al estado 48
    T_Return          desplazar e ir al estado 49
    T_Break           desplazar e ir al estado 50
    T_New             desplazar e ir al estado 51
    T_NewArray        desplazar e ir al estado 52
    T_Print           desplazar e ir al estado 53
    T_ReadInteger     desplazar e ir al estado 54
    T_ReadLine        desplazar e ir al estado 55
    T_Identifier      desplazar e ir al estado 56
    T_StringConstant  desplazar e ir al estado 57
    T_IntConstant     desplazar e ir al estado 58
    T_DoubleConstant  desplazar e ir al estado 59
    T_BoolConstant    desplazar e ir al estado 60
    '-'               desplazar e ir al estado 61
    '!'               desplazar e ir al estado 62
    '{'               desplazar e ir al estado 27
    '('               desplazar e ir al estado 63

    ';'       reduce usando la regla 57 (OptExpr)
    $default  reduce usando la regla 41 (StmtList)

    VarDecl    ir al estado 64
    Variable   ir al estado 13
    Type       ir al estado 36
    StmtBlock  ir al estado 65
    StmtList   ir al estado 66
    Stmt       ir al estado 67
    LValue     ir al estado 68
    Call       ir al estado 69
    OptExpr    ir al estado 70
    Expr       ir al estado 71
    Constant   ir al estado 72


State 35

   35 FormalList: Variable .

    $default  reduce usando la regla 35 (FormalList)


State 36

    9 Variable: Type . T_Identifier
   15 Type: Type . T_Dims

    T_Dims        desplazar e ir al estado 25
    T_Identifier  desplazar e ir al estado 73


State 37

   31 FnHeader: T_Void T_Identifier '(' Formals . ')'

    ')'  desplazar e ir al estado 74


State 38

   32 Formals: FormalList .
   34 FormalList: FormalList . ',' Variable

    ','  desplazar e ir al estado 75

    $default  reduce usando la regla 32 (Formals)


State 39

   20 OptExt: T_Extends T_Identifier .

    $default  reduce usando la regla 20 (OptExt)


State 40

   22 OptImpl: T_Implements . ImpList

    T_Identifier  desplazar e ir al estado 76

    ImpList  ir al estado 77


State 41

   19 ClassDecl: T_Class T_Identifier OptExt OptImpl . '{' FieldList '}'

    '{'  desplazar e ir al estado 78


State 42

   16 IntfDecl: T_Interface T_Identifier '{' IntfList . '}'
   17 IntfList: IntfList . FnHeader ';'

    T_Void        desplazar e ir al estado 1
    T_Bool        desplazar e ir al estado 2
    T_Int         desplazar e ir al estado 3
    T_Double      desplazar e ir al estado 4
    T_String      desplazar e ir al estado 5
    T_Identifier  desplazar e ir al estado 8
    '}'           desplazar e ir al estado 79

    Type      ir al estado 80
    FnHeader  ir al estado 81


State 43

   30 FnHeader: Type T_Identifier '(' Formals . ')'

    ')'  desplazar e ir al estado 82


State 44

   87 Constant: T_Null .

    $default  reduce usando la regla 87 (Constant)


State 45

   82 Expr: T_This .

    $default  reduce usando la regla 82 (Expr)


State 46

   45 Stmt: T_While . '(' Expr ')' Stmt

    '('  desplazar e ir al estado 83


State 47

   46 Stmt: T_For . '(' OptExpr ';' Expr ';' OptExpr ')' Stmt

    '('  desplazar e ir al estado 84


State 48

   44 Stmt: T_If . '(' Expr ')' Stmt OptElse

    '('  desplazar e ir al estado 85


State 49

   47 Stmt: T_Return . Expr ';'
   48     | T_Return . ';'

    T_Null            desplazar e ir al estado 44
    T_This            desplazar e ir al estado 45
    T_New             desplazar e ir al estado 51
    T_NewArray        desplazar e ir al estado 52
    T_ReadInteger     desplazar e ir al estado 54
    T_ReadLine        desplazar e ir al estado 55
    T_Identifier      desplazar e ir al estado 86
    T_StringConstant  desplazar e ir al estado 57
    T_IntConstant     desplazar e ir al estado 58
    T_DoubleConstant  desplazar e ir al estado 59
    T_BoolConstant    desplazar e ir al estado 60
    '-'               desplazar e ir al estado 61
    '!'               desplazar e ir al estado 62
    ';'               desplazar e ir al estado 87
    '('               desplazar e ir al estado 63

    LValue    ir al estado 68
    Call      ir al estado 69
    Expr      ir al estado 88
    Constant  ir al estado 72


State 50

   50 Stmt: T_Break . ';'

    ';'  desplazar e ir al estado 89


State 51

   80 Expr: T_New . '(' T_Identifier ')'

    '('  desplazar e ir al estado 90


State 52

   81 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  desplazar e ir al estado 91


State 53

   49 Stmt: T_Print . '(' ExprList ')' ';'

    '('  desplazar e ir al estado 92


State 54

   78 Expr: T_ReadInteger . '(' ')'

    '('  desplazar e ir al estado 93


State 55

   79 Expr: T_ReadLine . '(' ')'

    '('  desplazar e ir al estado 94


State 56

   14 Type: T_Identifier .
   51 LValue: T_Identifier .
   54 Call: T_Identifier . '(' Actuals ')'

    '('  desplazar e ir al estado 95

    T_Dims        reduce usando la regla 14 (Type)
    T_Identifier  reduce usando la regla 14 (Type)
    $default      reduce usando la regla 51 (LValue)


State 57

   86 Constant: T_StringConstant .

    $default  reduce usando la regla 86 (Constant)


State 58

   83 Constant: T_IntConstant .

    $default  reduce usando la regla 83 (Constant)


State 59

   85 Constant: T_DoubleConstant .

    $default  reduce usando la regla 85 (Constant)


State 60

   84 Constant: T_BoolConstant .

    $default  reduce usando la regla 84 (Constant)


State 61

   76 Expr: '-' . Expr

    T_Null            desplazar e ir al estado 44
    T_This            desplazar e ir al estado 45
    T_New             desplazar e ir al estado 51
    T_NewArray        desplazar e ir al estado 52
    T_ReadInteger     desplazar e ir al estado 54
    T_ReadLine        desplazar e ir al estado 55
    T_Identifier      desplazar e ir al estado 86
    T_StringConstant  desplazar e ir al estado 57
    T_IntConstant     desplazar e ir al estado 58
    T_DoubleConstant  desplazar e ir al estado 59
    T_BoolConstant    desplazar e ir al estado 60
    '-'               desplazar e ir al estado 61
    '!'               desplazar e ir al estado 62
    '('               desplazar e ir al estado 63

    LValue    ir al estado 68
    Call      ir al estado 69
    Expr      ir al estado 96
    Constant  ir al estado 72


State 62

   77 Expr: '!' . Expr

    T_Null            desplazar e ir al estado 44
    T_This            desplazar e ir al estado 45
    T_New             desplazar e ir al estado 51
    T_NewArray        desplazar e ir al estado 52
    T_ReadInteger     desplazar e ir al estado 54
    T_ReadLine        desplazar e ir al estado 55
    T_Identifier      desplazar e ir al estado 86
    T_StringConstant  desplazar e ir al estado 57
    T_IntConstant     desplazar e ir al estado 58
    T_DoubleConstant  desplazar e ir al estado 59
    T_BoolConstant    desplazar e ir al estado 60
    '-'               desplazar e ir al estado 61
    '!'               desplazar e ir al estado 62
    '('               desplazar e ir al estado 63

    LValue    ir al estado 68
    Call      ir al estado 69
    Expr      ir al estado 97
    Constant  ir al estado 72


State 63

   75 Expr: '(' . Expr ')'

    T_Null            desplazar e ir al estado 44
    T_This            desplazar e ir al estado 45
    T_New             desplazar e ir al estado 51
    T_NewArray        desplazar e ir al estado 52
    T_ReadInteger     desplazar e ir al estado 54
    T_ReadLine        desplazar e ir al estado 55
    T_Identifier      desplazar e ir al estado 86
    T_StringConstant  desplazar e ir al estado 57
    T_IntConstant     desplazar e ir al estado 58
    T_DoubleConstant  desplazar e ir al estado 59
    T_BoolConstant    desplazar e ir al estado 60
    '-'               desplazar e ir al estado 61
    '!'               desplazar e ir al estado 62
    '('               desplazar e ir al estado 63

    LValue    ir al estado 68
    Call      ir al estado 69
    Expr      ir al estado 98
    Constant  ir al estado 72


State 64

   38 VarDecls: VarDecls VarDecl .

    $default  reduce usando la regla 38 (VarDecls)


State 65

   43 Stmt: StmtBlock .

    $default  reduce usando la regla 43 (Stmt)


State 66

   37 StmtBlock: '{' VarDecls StmtList . '}'

    '}'  desplazar e ir al estado 99


State 67

   40 StmtList: Stmt . StmtList
